--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="menu_friends">friends</string>
     <string name="menu_home">home</string>
 
+    <string name="add">add</string>
     <string name="invite">invite</string>
     <string name="repeat">repeat</string>
     <string name="save">save</string>
