--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="menu_friends">friends</string>
     <string name="menu_home">home</string>
     <string name="menu_share">share</string>
+    <string name="menu_logout">logout</string>
 
     <string name="add">add</string>
     <string name="invite">invite</string>
