--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <string name="menu_share">share</string>
     <string name="menu_logout">logout</string>
 
+    <string name="fcm_msg">fcmmsg</string>
+    <string name="fcm_channel_id">teawthme</string>
+
     <string name="add">add</string>
     <string name="invite">invite</string>
     <string name="repeat">repeat</string>
@@ -25,4 +28,8 @@
     <string name="create">create</string>
     <string name="dont_have_an_account">don\'t have an account?</string>
     <string name="im_drinking_tea">i\'m drinking tea</string>
+
+    <string name="last_session">last session was</string>
+    <string name="you_had">you had </string>
+    <string name="sessions">sessions</string>
 </resources>
