--- a/app/src/main/res/values-b+de/strings.xml
+++ b/app/src/main/res/values-b+de/strings.xml
@@ -26,5 +26,5 @@
     <string name="you_had">du hattest</string>
     <string name="sessions">sitzungen</string>
     <string name="session">sitzung</string>
-    <string name="never_documented">niemals</string>
+    <string name="never_documented">niemalstag</string>
 </resources>
