--- a/app/src/main/res/values-b+de/strings.xml
+++ b/app/src/main/res/values-b+de/strings.xml
@@ -20,6 +20,7 @@
     <string name="dont_have_an_account">don\'t have an account?</string>
     <string name="im_drinking_tea">i\'m drinking tea</string>
 
+    <string name="last_online">last seen</string>
     <string name="add">add</string>
     <string name="last_session">deine letzte sitzung war</string>
     <string name="at">am</string>
