--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="sessions">sessions</string>
     <string name="session">session</string>
     <string name="never_documented">never documented</string>
+    <string name="last_online">zuletzt online</string>
 </resources>
