--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,10 @@
     <string name="dont_have_an_account">don\'t have an account?</string>
     <string name="im_drinking_tea">i\'m drinking tea</string>
 
+    <string name="saved_settings">saved settings</string>
+    <string name="tea_time">tea time</string>
+    <string name="username">username</string>
+    <string name="set">set</string>
     <string name="add">add</string>
     <string name="last_session">last session was</string>
     <string name="you_had">you had </string>
