--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="session">session</string>
     <string name="never_documented">never documented</string>
     <string name="last_online">zuletzt online</string>
+    <string name="minutes">minutes</string>
 </resources>
