--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,4 +37,10 @@
     <string name="name">name</string>
     <string name="volume">volume</string>
     <string name="liter">liter</string>
+    <string name="do_you_really_want_to_leave">do you really wannt to leave?</string>
+    <string name="you_are_about_to_leave_the_app">you are about to leave the app</string>
+    <string name="i_hope_you_are_your_own_friend">i hope you are your own friend</string>
+    <string name="invite_someone">invite someone</string>
+    <string name="no_internet_connection">no internet connection</string>
+    <string name="known_unknowns">known unknowns</string>
 </resources>
